[gd_scene load_steps=17 format=3 uid="uid://bb5o3lkvstxm6"]

[ext_resource type="Texture2D" uid="uid://bei7x67psb4c4" path="res://Assets_PixelAdventure/Main Characters/Mask Dude.png" id="1_fydvw"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_rmk3i"]
[ext_resource type="Script" path="res://Player/camera_2d.gd" id="3_g630a"]
[ext_resource type="LabelSettings" uid="uid://cwhbs0wi4btra" path="res://Player/TextFrutas.tres" id="4_wlokx"]
[ext_resource type="AudioStream" uid="uid://ba2hxqf376lg" path="res://Assets_PixelAdventure/Sounds/Jump.ogg" id="5_1gvnn"]
[ext_resource type="AudioStream" uid="uid://bk01bmd5p2v58" path="res://Assets_PixelAdventure/Sounds/Hit.ogg" id="6_ykgks"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_srncp"]
size = Vector2(18, 21)

[sub_resource type="Animation" id="Animation_0i2qm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_rsnrh"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_au7e3"]
resource_name = "herido"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42]
}

[sub_resource type="Animation" id="Animation_8xbf7"]
resource_name = "idle"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_6yiro"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}

[sub_resource type="Animation" id="Animation_6iet4"]
resource_name = "walk"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 21]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_os57i"]
_data = {
"RESET": SubResource("Animation_0i2qm"),
"fall": SubResource("Animation_rsnrh"),
"herido": SubResource("Animation_au7e3"),
"idle": SubResource("Animation_8xbf7"),
"jump": SubResource("Animation_6yiro"),
"walk": SubResource("Animation_6iet4")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_siohe"]
bg_color = Color(0.0338533, 0.0338533, 0.0338532, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oh06g"]
bg_color = Color(0.75339, 2.38247e-06, 5.77569e-07, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.419969, 8.18223e-07, 2.40654e-07, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 6
script = ExtResource("1_rmk3i")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_fydvw")
hframes = 11
vframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 4.5)
shape = SubResource("RectangleShape2D_srncp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_os57i")
}

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_g630a")

[node name="PlayerGUI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerGUI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="FrutasLabel2" type="Label" parent="PlayerGUI/HBoxContainer" groups=["Player"]]
layout_mode = 2
text = "Frutas:"
label_settings = ExtResource("4_wlokx")

[node name="FrutasLabel" type="Label" parent="PlayerGUI/HBoxContainer"]
texture_filter = 2
layout_mode = 2
label_settings = ExtResource("4_wlokx")

[node name="HPProgressBar" type="ProgressBar" parent="PlayerGUI"]
offset_right = 118.0
offset_bottom = 14.0
theme_override_styles/background = SubResource("StyleBoxFlat_siohe")
theme_override_styles/fill = SubResource("StyleBoxFlat_oh06g")
max_value = 10.0
value = 5.0
show_percentage = false

[node name="RaycastDMG" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RaycastDMG"]
target_position = Vector2(0, 23)
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="RaycastDMG"]
position = Vector2(7, 0)
target_position = Vector2(0, 23)
collision_mask = 2

[node name="RayCast2D3" type="RayCast2D" parent="RaycastDMG"]
position = Vector2(-6, 0)
target_position = Vector2(0, 23)
collision_mask = 2

[node name="AudioSalto" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1gvnn")

[node name="AudioHerirse" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ykgks")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
